--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,7 +20,7 @@ body {
 .header {
 	position: absolute;
 	top: 0;
-	right: 0;
+	left: 0;
 	width: 100%;
 	height: 57vw;
 	max-height: 20.484em;
@@ -207,11 +207,86 @@ body {
 		}
 	}
 }
-// @media (min-width: 992px) {
-// 	.header {
+@media (min-width: 992px) {
+	body {
+		align-items: center;
+	}
 
-// 	}
-// }
+	.header {
+		width: 32%;
+		height: 100%;
+		max-height: 100dvh;
+		z-index: -1;
+	}
+
+	.main {
+		max-width: 90%;
+		&__content {
+			height: 80vh;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			column-gap: 12%;
+
+			&-cards {
+				width: 50%;
+				margin-bottom: 0;
+				justify-content: space-between;
+				&-one {
+					position: static;
+					height: 110%;
+					max-height: 100%;
+					width: 70%;
+					order: 0;
+					&-texts {
+						&-numbers {
+							font-size: 2.5rem;
+						}
+					}
+				}
+
+				&-two {
+					order: 1;
+					align-self: flex-start;
+					margin-left: auto;
+
+					&-img {
+					}
+
+					&-number {
+						font-size: 0.7rem;
+					}
+				}
+			}
+
+			&-form {
+				width: 40%;
+				&-label {
+					font-size: 1.2rem;
+				}
+
+				&-input {
+					margin-bottom: 0.2em;
+					font-size: 1.2rem;
+
+					&-inputs {
+						&-box {
+							&-error {
+								visibility: visible;
+								margin-bottom: 1em;
+								font-size: 1rem;
+							}
+						}
+					}
+				}
+
+				&-btn {
+					font-size: 1.5rem; // min
+				}
+			}
+		}
+	}
+}
 
 // - Family: [Space Grotesk](https://fonts.google.com/specimen/Space+Grotesk)
 // - Weights: 500
