--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -226,80 +226,91 @@ body {
 	}
 
 	.header {
-		width: 32%;
+		width: 33%;
 		height: 100%;
-		max-height: 100dvh;
-		z-index: -1;
+		max-height: 100%;
+		background-position: center;
 	}
 
 	.main {
-		max-width: 90%;
+		width: 78%;
+		max-width: 70.2em;
 		&__content {
-			height: 80vh;
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
-			column-gap: 12%;
 
 			&-cards {
 				width: 50%;
+				max-width: 37.25em;
 				margin-bottom: 0;
 				justify-content: space-between;
+				row-gap: clamp(1.8em, calc(1.8em + ((35.2 - 28.8) * ((100vw - 992px) / (1440 - 992)))), 2.2em);
 				&-one {
 					position: static;
-					height: 110%;
+					height: 100%;
 					max-height: 100%;
-					width: 70%;
 					order: 0;
-					&-texts {
-						&-numbers {
-							font-size: 2.5rem;
+
+					&-parent {
+						&-logo {
+							width: 15%;
+						}
+
+						&-texts {
+							&-numbers {
+								font-size: clamp(2.2rem, calc(2.2rem + ((33 - 22) * ((100vw - 992px) / (1440 - 992)))), 3.3rem);
+							}
+
+							&-name,
+							&-date {
+								font-size: clamp(1.1rem, calc(1.1rem + ((15 - 11) * ((100vw - 992px) / (1440 - 992)))), 1.5rem);
+							}
 						}
 					}
 				}
 
 				&-two {
-					order: 1;
-					align-self: flex-start;
 					margin-left: auto;
-
-					&-img {
-					}
+					align-self: flex-start;
+					order: 1;
+					-webkit-box-shadow: 28px 30px 100px -7px rgba(66, 68, 90, 0.3);
+					-moz-box-shadow: 28px 30px 100px -7px rgba(66, 68, 90, 0.3);
+					box-shadow: 28px 30px 100px -7px rgba(66, 68, 90, 0.3);
 
 					&-number {
-						font-size: 0.7rem;
+						font-size: clamp(1rem, calc(1rem + ((13 - 10) * ((100vw - 992px) / (1440 - 992)))), 1.3rem);
 					}
 				}
 			}
 
 			&-form {
-				width: 40%;
+				width: 35%;
 				&-label {
-					font-size: 1.2rem;
+					font-size: clamp(0.9rem, calc(0.9rem + ((14 - 9) * ((100vw - 992px) / (1440 - 992)))), 1.4rem);
 				}
 
 				&-input {
-					margin-bottom: 0.2em;
+					margin-bottom: 0.3em;
 					font-size: 1.2rem;
+					font-size: 1.9rem;
+					font-size: clamp(1.2rem, calc(1.2rem + ((19 - 12) * ((100vw - 992px) / (1440 - 992)))), 1.9rem);
 
 					&-inputs {
 						&-box {
 							&-error {
 								visibility: visible;
 								margin-bottom: 1em;
-								font-size: 1rem;
+								font-size: clamp(0.85rem, calc(0.85rem + ((13 - 8.5) * ((100vw - 992px) / (1440 - 992)))), 1.3rem);
 							}
 						}
 					}
 				}
 
 				&-btn {
-					font-size: 1.5rem; // min
+					font-size: clamp(1.2rem, calc(1.2rem + ((22 - 12) * ((100vw - 992px) / (1440 - 992)))), 2.2rem);
 				}
 			}
 		}
 	}
 }
-
-// - Family: [Space Grotesk](https://fonts.google.com/specimen/Space+Grotesk)
-// - Weights: 500
