--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 	--red: hsl(0, 100%, 66%);
 	--light-grayish-violet: hsl(270, 3%, 87%);
 	--dark-grayish-violet: hsl(279, 6%, 55%);
-	--very-dark-violet: hsl(278, 68%, 11%);
+	--very-dark-violet: #21092f;
 	--linear-gradient: linear-gradient(hsl(249, 99%, 64%) to hsl(278, 94%, 30%));
 }
 
@@ -96,6 +96,10 @@ body {
 							font-size: clamp(0.7rem, calc(0.7rem + ((15 - 7) * ((100vw - 250px) / (575 - 250)))), 1.5rem);
 							color: var(--light-grayish-violet);
 						}
+
+						&-date {
+							margin-left: auto;
+						}
 					}
 				}
 			}
@@ -147,7 +151,7 @@ body {
 
 				&:focus {
 					outline: none;
-					border: 1px solid black;
+					border: 1px solid var(--very-dark-violet);
 				}
 
 				&-inputs {
@@ -196,26 +200,29 @@ body {
 			display: none;
 
 			&-img {
-				margin-bottom: 2.5em;
+				margin-bottom: clamp(1.7em, calc(1.7em + ((32 - 27.2) * ((100vw - 250px) / (575 - 250)))), 2em);
+
 				width: 25%;
 			}
 
 			&-thanks {
-				margin-bottom: 0.4em;
+				margin-bottom: 0.2em;
 				font-weight: 500;
-				font-size: 4rem; // min
-				letter-spacing: 5px;
+				font-size: clamp(2rem, calc(2rem + ((48 - 20) * ((100vw - 250px) / (575 - 250)))), 4.8rem);
+				letter-spacing: 3px;
 				text-transform: uppercase;
 				color: var(--very-dark-violet);
 			}
 
 			&-info {
 				color: var(--dark-grayish-violet);
-				font-size: 2.6rem; //min
+				font-size: clamp(1.3rem, calc(1.3rem + ((27 - 13) * ((100vw - 250px) / (575 - 250)))), 2.7rem);
+				font-weight: 500;
 			}
 
 			&-btn {
 				margin-top: 2.5em;
+				font-size: clamp(1.2rem, calc(1.2rem + ((27 - 12) * ((100vw - 250px) / (575 - 250)))), 2.7rem);
 			}
 		}
 	}
@@ -274,9 +281,10 @@ body {
 					margin-left: auto;
 					align-self: flex-start;
 					order: 1;
-					-webkit-box-shadow: 28px 30px 100px -7px rgba(66, 68, 90, 0.3);
-					-moz-box-shadow: 28px 30px 100px -7px rgba(66, 68, 90, 0.3);
-					box-shadow: 28px 30px 100px -7px rgba(66, 68, 90, 0.3);
+					border-radius: 0.8em;
+					-webkit-box-shadow: 54px 41px 100px 5px rgba(66, 68, 90, 0.27);
+					-moz-box-shadow: 54px 41px 100px 5px rgba(66, 68, 90, 0.27);
+					box-shadow: 54px 41px 100px 5px rgba(66, 68, 90, 0.27);
 
 					&-number {
 						font-size: clamp(1rem, calc(1rem + ((13 - 10) * ((100vw - 992px) / (1440 - 992)))), 1.3rem);
@@ -295,12 +303,16 @@ body {
 					font-size: 1.2rem;
 					font-size: 1.9rem;
 					font-size: clamp(1.2rem, calc(1.2rem + ((19 - 12) * ((100vw - 992px) / (1440 - 992)))), 1.9rem);
+					transition: border 0.2s;
+
+					&:hover {
+						border: 1px solid var(--very-dark-violet);
+					}
 
 					&-inputs {
 						&-box {
 							&-error {
-								visibility: visible;
-								margin-bottom: 1em;
+								margin-bottom: 0.3em;
 								font-size: clamp(0.85rem, calc(0.85rem + ((13 - 8.5) * ((100vw - 992px) / (1440 - 992)))), 1.3rem);
 							}
 						}
@@ -309,6 +321,32 @@ body {
 
 				&-btn {
 					font-size: clamp(1.2rem, calc(1.2rem + ((22 - 12) * ((100vw - 992px) / (1440 - 992)))), 2.2rem);
+					transition: background-color 0.2s;
+
+					&:hover {
+						background-color: #471564;
+					}
+				}
+			}
+
+			&-complete {
+				width: 35%;
+
+				&-img {
+					margin-bottom: 1.5em;
+				}
+
+				&-thanks {
+					font-size: clamp(2.5rem, calc(2.5rem + ((33 - 25) * ((100vw - 992px) / (1440 - 992)))), 3.3rem);
+				}
+
+				&-info {
+					font-size: clamp(1.6rem, calc(1.6rem + ((20 - 16) * ((100vw - 992px) / (1440 - 992)))), 2rem);
+				}
+
+				&-btn {
+					margin-top: 2em;
+					font-size: clamp(1.5rem, calc(1.5rem + ((20 - 15) * ((100vw - 992px) / (1440 - 992)))), 2rem);
 				}
 			}
 		}
